comments and submissions for v2 api

--- a/private/templates/sbnext-common/components/player.twig
+++ b/private/templates/sbnext-common/components/player.twig
@@ -34,7 +34,7 @@
 
             {% if bunnyEnabled %}
             player.src([{
-                src: '{{ video.bunny_url }}',
+                src: '{{ video.file }}',
                 type: 'application/x-mpegURL'
             }]);
             {% else %}
