--- a/private/templates/sbnext-desktop/watch.twig
+++ b/private/templates/sbnext-desktop/watch.twig
@@ -31,7 +31,7 @@
             <div class="grid">
                <div class="col-md-8">
                   <img src="{{ profile_image(video.u_name) }}" class="rounded" style="width:48px;float: left;margin-right:8px;">
-                  <a href="user.php?name={{ video.u_name }}" style="color:{{ video.u_customcolor }}"><b style="height: 20px;display: inline-block;">{{ video.u_name }}</b></a> • {{ allVideos }} videos
+                  <a href="user.php?name={{ video.u_name }}" style="color:{{ video.u_customcolor }}"><b style="height: 20px;display: inline-block;">{{ video.u_name }}</b></a> • {{ allVideos }} submissions
                   <br>
                   {% if userdata.id == video.author %}<a class="button button-secondary button-small">{{ __("Settings") }}</a>{% else %}
                   <button id="subscribe-watch" class="button button-{% if subscribed %}secondary{% else %}primary{% endif %} button-small" type="button" {% if not log or userdata.id == video.author %}disabled{% endif %}>{% if subscribed %}{{ __("Unfollow") }}{% else %}{{ __("Follow") }}{% endif %}</button>
