do fixes 'n shit

--- a/private/templates/sbnext-common/components/artwork.twig
+++ b/private/templates/sbnext-common/components/artwork.twig
@@ -1,5 +1,1 @@
-{% if bunnyEnabled %}
-<img class="img-fluid" src="{{ video.bunny_url }}" alt="{{ video.title }}">
-{% else %}
-<img class="img-fluid" src="{{ video.videofile }}" alt="{{ video.title }}">
-{% endif %}
+<img class="img-fluid" src="{{ video.file }}" alt="{{ video.title }}"> 
