--- a/private/templates/sbnext-desktop/watch.twig
+++ b/private/templates/sbnext-desktop/watch.twig
@@ -51,16 +51,16 @@
                <div class="col-md-8">
                   <div style="margin-top:-9px;">
                      <button href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}"
-					 class="button {% if rating == 1 %}button-success{% else %}button-secondary-invis{% endif %}">
+					 class="button {% if rating == 1 %}button-success{% else %}button-secondary{% endif %}">
                      {{ icon("thumb-up", 20) }}
                      {{ __("Like") }}
                      </button>
                      <button href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}" 
-					 class="button {% if rating is same as(0) %}button-danger{% else %}button-secondary-invis{% endif %} tooltip" title="{{ __("Dislike") }}">
+					 class="button {% if rating is same as(0) %}button-danger{% else %}button-secondary{% endif %} tooltip" title="{{ __("Dislike") }}">
                      {{ icon("thumb-down", 20) }}
                      </button>
                      <button href="#" id="{% if log %}favorite{% else %}action_unlogged{% endif %}"
-                              class="button {% if isFavorited %}button-warning{% else %}button-secondary-invis{% endif %} tooltip" title="{{ __("Favorite") }}">
+                              class="button {% if isFavorited %}button-warning{% else %}button-secondary{% endif %} tooltip" title="{{ __("Favorite") }}">
                         {{ icon("star", 20) }}
                      </button>
                   </div>
