--- a/private/scss-finalium/style.scss
+++ b/private/scss-finalium/style.scss
@@ -153,32 +153,48 @@ blockquote {
   text-align: center;
 }
 
+// Pagination \\
+.pagination {
+	margin-top: 1em;
+	font-size: 14pt;
+	font-weight: bold;
+
+	span {
+		margin-left: 13px;
+		display: inline-block;
+	}
+}
+
 // Settings \\
 
 .settings {
-  width: 100%;
-  border-collapse: collapse;
+	width: 100%;
+	border-collapse: collapse;
 
-  .a {
-    text-align: center;
-    width: 300px;
-  }
+	.a {
+		text-align: center;
+		width: 200px;
+	}
 
-  .a,
-  .b {
-    border-bottom: 1px solid #ccc;
-    padding: 5px;
-  }
+	td, th {
+		border-bottom: 1px solid #bbb;
+		padding: 10px 5px;
+	}
 
-  tr {
-    &:nth-child(odd) {
-      background-color: #f5f5f5;
-    }
+	tr th {
+		background-color: #fafafa;
+		font-size: 12pt;
+	}
 
-    &:nth-child(even) {
-      background-color: #e8e8e8;
-    }
-  }
+	tr {
+		&:nth-child(odd)  { background-color: #f5f5f5; }
+		&:nth-child(even) { background-color: #e8e8e8; }
+	}
+
+	.fotnot {
+		margin-top: 8px;
+		font-size: 10.5pt;
+	}
 }
 
 /// Generic text aligns \\\
