--- a/private/templates/sbnext-common/_layout.twig
+++ b/private/templates/sbnext-common/_layout.twig
@@ -85,7 +85,7 @@
 			<div id="debugModal" class="bg-neutral" style="padding:0.3em;">
 				<h3>Debug info</h3>
 				<div class="header_message header-danger">{{ __("It is risky to screenshot this due to security reasons, so please don't.") }}</div>
-				<p><pre>{{ dump() | escape('js') }}</pre></p>
+				<p><pre>{{ dump() }}</pre></p>
 			</div>
 			{% endif %}
 		{% endif %}
