--- a/private/templates/sbnext-common/index.twig
+++ b/private/templates/sbnext-common/index.twig
@@ -14,7 +14,11 @@
         <div class="main-content">
             <div class="container sb-welcome">
                 {% if log %}
-                        <h1>{{ __("Welcome to %s, %s", [ website_branding.name, userdata.title | escape('js') ])}}</h1>
+                <div class="grid">
+                    <div class="col-md-4">
+                    </div>
+                    <div class="col-md-12">
+                        <h1>{{ __("Welcome to %s, %s", [ website_branding.name, userdata.title ])}}</h1>
                         {# hack to prevent twig from outputing the number 1 #}
                         {% if totalSubscribers != 1 %}
                             {% set pluralSubscribers = __("s") %}
@@ -23,6 +27,8 @@
                             {% set pluralViews = __("s") %}
                         {% endif %}
                         <p>{{ __("%s follower%s", [totalSubscribers ?? __("no"), pluralSubscribers]) }} - {{ __("%s view%s", [totalViews ?? __("no"), pluralViews]) }} (FIXME: inaccurate info)</p>
+                    </div>
+                </div>
                 {% else %}
                     <h1>{{ __("Welcome to %s", [ website_branding.name ]) }}</h1>
                     <a class="button button-primary button-large" href="register.php">{{ __("Get started") }}</a>
