--- a/private/templates/sbnext-common/index.twig
+++ b/private/templates/sbnext-common/index.twig
@@ -15,18 +15,19 @@
             <div class="container sb-welcome">
                 {% if log %}
                 <div class="grid">
-                    <div class="col-md-4">
+                    <div class="col-md-2">
+						<img class="rounded img-fluid" src="{{ profile_image(userdata.name) }}" alt="{{ userdata.name }}">
                     </div>
-                    <div class="col-md-12">
-                        <h1>{{ __("Welcome to %s, %s", [ website_branding.name, userdata.title ])}}</h1>
+                    <div class="col-md-14">
+                        <h1>{{ userdata.title }}</h1>
                         {# hack to prevent twig from outputing the number 1 #}
                         {% if totalSubscribers != 1 %}
                             {% set pluralSubscribers = __("s") %}
                         {% endif %}
-                        {% if totalViews != 1 %}
-                            {% set pluralViews = __("s") %}
+                        {% if totalSubmissions != 1 %}
+                            {% set pluralSubmissions = __("s") %}
                         {% endif %}
-                        <p>{{ __("%s follower%s", [totalSubscribers ?? __("no"), pluralSubscribers]) }} - {{ __("%s view%s", [totalViews ?? __("no"), pluralViews]) }} (FIXME: inaccurate info)</p>
+                        <p>@{{userdata.name}} · {{ __("%s follower%s", [totalSubscribers ?? __("no"), pluralSubscribers]) }} · {{ __("%s submission%s", [totalSubmissions ?? __("no"), pluralSubmissions]) }}</p>
                     </div>
                 </div>
                 {% else %}
@@ -49,12 +50,24 @@
             {% if videos %}
             <a class="button button-secondary float-right" href="browse.php">{{ __("Browse more") }}</a>
             {% endif %}
+			{% if log %}
+			<h3 style="margin-top:0">{{ __("Your follow's submissions") }}</h3>
+			{% else %}
             <h3 style="margin-top:0">{{ __("Randomly selected submissions") }}</h3>
-            {% for video in videos %}
-                {{ small_video_box(video) }}
-            {% else %}
-                <p>{{ __("This instance currently lacks submissions.") }}</p>
-            {% endfor %}
+			{% endif %}
+			{% if log %}
+				{% for video in subscriptionVideos %}
+					{{ small_video_box(video) }}
+				{% else %}
+					<p>{{ __("Either you're not following anyone, or none of your follows have submissions.") }}</p>
+				{% endfor %}
+			{% else %}
+				{% for video in videos %}
+					{{ small_video_box(video) }}
+				{% else %}
+					<p>{{ __("This instance currently lacks submissions.") }}</p>
+				{% endfor %}
+			{% endif %}
         </div>
     </div>
 </div>
