--- a/private/templates/sbnext-desktop/components/_header.twig
+++ b/private/templates/sbnext-desktop/components/_header.twig
@@ -49,6 +49,7 @@
                         {% else %}
                             <div style="display: flex;justify-content: center;align-items: center;gap: 5px;margin-top: 2px;">
                                 <a href="../login.php">{{ __("Login") }}</a>
+								<a href="../register.php">{{ __("Register") }}</a>
                             </div>
                         {% endif %}
                     {% endif %}
