--- a/private/templates/sbnext-common/_layout.twig
+++ b/private/templates/sbnext-common/_layout.twig
@@ -53,7 +53,7 @@
 	{% include "components/_header.twig" %}
 {% endif %}
 {% block precontent %}{% endblock %}
-<div class="container">
+<div class="container page-container">
 	{% if userbandata %}
 		<div class="header_message header-danger">
 			<h1>{{ __("Sorry %s, you are banned from %s.", [userdata.name, website_branding.name]) }}</h1>
