--- a/private/templates/sbnext-common/stats.twig
+++ b/private/templates/sbnext-common/stats.twig
@@ -64,31 +64,49 @@
                             {% endfor %}
                         ],
                         backgroundColor: [
-                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(190, 77, 37, 0.2)',
                         ],
                         borderColor: [
-                            'rgba(255, 99, 132, 1)',
+                            'rgba(190, 77, 37, 1)',
                         ],
                         borderWidth: 1
                     },
-                        {
-                            label: 'Users',
-                            data: [
-                                {% for graph in user_graph_data %}
-                                {
-                                    x: "{{ graph.joined }}",
-                                    y: {{ graph.runningTotal }},
-                                },
-                                {% endfor %}
-                            ],
-                            backgroundColor: [
-                                'rgba(37, 150, 190, 0.2)',
-                            ],
-                            borderColor: [
-                                'rgba(37, 150, 190, 1.0)',
-                            ],
-                            borderWidth: 1
-                        },
+                    {
+                        label: 'Users',
+                        data: [
+                            {% for graph in user_graph_data %}
+                            {
+                                x: "{{ graph.joined }}",
+                                y: {{ graph.runningTotal }},
+                            },
+                            {% endfor %}
+                        ],
+                        backgroundColor: [
+                            'rgba(37, 150, 190, 0.2)',
+                        ],
+                        borderColor: [
+                            'rgba(37, 150, 190, 1.0)',
+                        ],
+                        borderWidth: 1
+                    },
+                    {
+                        label: 'Comments',
+                        data: [
+                            {% for graph in comment_graph_data %}
+                            {
+                                x: "{{ graph.date }}",
+                                y: {{ graph.runningTotal }},
+                            },
+                            {% endfor %}
+                        ],
+                        backgroundColor: [
+                            'rgba(37, 190, 135, 0.2)',
+                        ],
+                        borderColor: [
+                            'rgba(37, 190, 135, 1.0)',
+                        ],
+                        borderWidth: 1
+                    },
                     ]
                 },
                 options: {
