--- a/private/scss-finalium/_variables.scss
+++ b/private/scss-finalium/_variables.scss
@@ -16,21 +16,21 @@ $success: $green;
 $info: $cyan;
 $warning: $yellow;
 $danger: $red;
+
+$form-input: #fff;
+
 $gray-100: #F8F8F8;
-$gray-150: #F1F1F1;
 $gray-200: #EEEEEE;
-$gray-250: #E8E8E8;
 $gray-300: #E2E2E2;
 $gray-400: #D3D3D3;
-$gray-450: #CCCCCC;
 $gray-500: #B4B4B4;
-$gray-650: #999999;
 $gray-600: #858585;
-$gray-650: #666666;
 $gray-700: #4F4F4F;
 $gray-800: #393939;
-$gray-850: #333333;
 $gray-900: #242424;
+
+$text-color: #000;
+
 $light: #f8f9fa;
 $dark: #343a40;
 $teal-color: $teal;
