--- a/private/scss-finalium/_cards.scss
+++ b/private/scss-finalium/_cards.scss
@@ -1,12 +1,12 @@
 .card {
-  border: 1px solid $gray-300;
+  border: 1px solid $gray-200;
   margin-bottom: 0.75em;
-  background-color: white;
+  background-color: $light;
 }
 
 .card-header {
   padding: 0.5em;
-  border-bottom: 1px solid $gray-300;
+  border-bottom: 1px solid $gray-200;
   background-color: $gray-100;
 }
 
