--- a/private/scss-finalium/style.scss
+++ b/private/scss-finalium/style.scss
@@ -36,16 +36,6 @@ h4, h5, h6 {
   box-sizing: border-box;
 }
 
-body {
-  background: $gray-100;
-  color: black;
-  font-family: $font;
-  font-size: 13px;
-  margin: auto;
-  width: 100%;
-  font-weight: 500;
-}
-
 a:link,
 a:visited {
   color: $primary;
@@ -71,64 +61,6 @@ blockquote {
 	p:before {
 		content: ">";
 	}
-}
-
-.footer {
-  background-color: $gray-150;
-  border-bottom: 1px solid $gray-250;
-  border-top: 1px solid $gray-250;
-  margin-top: 0;
-  overflow: hidden;
-  padding: 2em 3em;
-  height: 255px;
-
-  img {
-    width: 135px;
-  }
-}
-
-.profiler {
-  background-color: rgba($gray-100,0.5);
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  padding: 5px;
-  text-align: center;
-  backdrop-filter: blur(50px);
-}
-
-.top_forum {
-  min-width: 800px;
-  background-color: black;
-  border-bottom: 1px solid #ccc;
-  border-top: 1px solid #ccc;
-  margin-top: 0;
-  overflow: hidden;
-  padding: 8px;
-  height: 16px !important;
-
-  ul.menu {
-    line-height: 16px;
-  }
-
-  ul.menu a {
-    color: white;
-  }
-
-  ul.menu a:hover {
-    background-color: #515151;
-  }
-}
-
-.top {
-  height: 35px;
-  border-top-width: 0;
-}
-
-.picon {
-  width: 35px;
-  height: 35px;
-  float: left;
 }
 
 .t_user {
@@ -165,38 +97,6 @@ blockquote {
 	}
 }
 
-// Settings \\
-
-.settings {
-	width: 100%;
-	border-collapse: collapse;
-
-	.a {
-		text-align: center;
-		width: 200px;
-	}
-
-	td, th {
-		border-bottom: 1px solid #bbb;
-		padding: 10px 5px;
-	}
-
-	tr th {
-		background-color: #fafafa;
-		font-size: 12pt;
-	}
-
-	tr {
-		&:nth-child(odd)  { background-color: #f5f5f5; }
-		&:nth-child(even) { background-color: #e8e8e8; }
-	}
-
-	.fotnot {
-		margin-top: 8px;
-		font-size: 10.5pt;
-	}
-}
-
 /// Generic text aligns \\\
 
 .left {
@@ -221,46 +121,6 @@ blockquote {
 
 .clear_right {
   clear: right;
-}
-
-// opensb stuff
-
-.main-content {
-  background: rgb(0,26,36);
-  background: linear-gradient(90deg, rgba(0,26,36,1) 0%, rgba(9,79,121,1) 35%, rgba(21,105,129,1) 100%);
-  color: white;
-  margin: -48px 0 0;
-  padding: 75px 0px 20px;
-  display: inline-block;
-  width: 100%;
-
-  .container {
-    h1, h2, h3, h4, h5, h6, p {
-      padding: 0;
-      margin: 8px 0;
-    }
-
-    h1 {
-      font-weight: 600;
-      font-size: 2.5em;
-    }
-
-    .stats {
-      font-size: 1.5em;
-    }
-  }
-}
-
-textarea,
-input[type]:not([type=file]):not([type=submit]) {
-  border: 1px solid $gray-400;
-  border-radius: 4px;
-}
-
-textarea:focus,
-input[type]:not([type=file]):not([type=submit]):focus {
-  border-color: $primary;
-  outline: none;
 }
 
 .chaziz-body {
@@ -328,131 +188,10 @@ input[type]:not([type=file]):not([type=submit]):focus {
   box-sizing: border-box;
 }
 
-.watchNext {
-  h1 {
-    font-size: 19px;
-  }
-
-  .viewcount {
-    color: $gray-850;
-    font-weight: normal;
-    margin-bottom: 4px;
-  }
-
-  .below-likesaber {
-    margin-top: 16px;
-    color: $gray-600;
-  }
-}
-
 .card-cover {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
-}
-
-#masthead-container {
-  z-index: 10;
-  margin: 0;
-  background-color: #fffffff0;
-  padding: 7px;
-  position: sticky;
-  display: block;
-  top: 0;
-  backdrop-filter: blur(4px);
-  border-bottom: 1px solid lightgrey;
-}
-
-#masthead {
-  width: 100%;
-  position: relative;
-  margin: auto;
-  height: 33px;
-  font-size: 13px;
-
-  a {
-    padding: 6px 10px;
-    font-size: 13px;
-    color: #333;
-  }
-
-  .button {
-    margin: 0;
-    padding: 0.65em 0;
-  }
-
-  #logo-container {
-    float: left;
-  }
-
-  #logo {
-    background-size: auto;
-    height: 30px;
-    border: 0;
-  }
-
-  .masthead-button {
-    margin-top: 2px;
-    width: 32px;
-    height: 32px;
-    text-align: center;
-    vertical-align: middle;
-  }
-
-  .guide-button {
-    float: left;
-  }
-}
-
-#masthead-search {
-  overflow: hidden;
-  padding: 3px;
-
-  label {
-    height: 100%;
-    line-height: 30px;
-    padding: 0;
-    border: none;
-    overflow: hidden;
-  }
-
-  #search-btn {
-    height: 31px;
-    float: right;
-    border-radius: 0 3px 3px 0;
-
-    span {
-      margin: 0 12px;
-    }
-  }
-
-  #masthead-search-terms {
-    border-radius: 0;
-    height: 31px;
-    overflow: hidden;
-
-    input {
-      display: inline-block;
-      width: 100%;
-      padding: 2px 6px;
-      margin: 0;
-      font-size: 16px;
-      box-sizing: border-box;
-      height: 31px;
-      border-radius: 3px 0 0 3px;
-      border: 1px solid #e5e5e5;
-      border-right: none;
-    }
-  }
-}
-
-.masthead-links-container {
-	float: left;
-	.masthead-links {
-		display: table-cell;
-		vertical-align: middle;
-		height: 33px;
-	}
 }
 
 #logo-container {
@@ -472,126 +211,6 @@ input[type]:not([type=file]):not([type=submit]):focus {
 .page {
   width: calc(100% - $sidebarlength);
   margin-left: auto;
-}
-
-/// "Likesaber" for watch page \\\
-.likesaber {
-  width: 200px;
-  height: 3px;
-  background-color: $gray-450;
-  float: right;
-
-  .like {
-    float: left;
-    height: 3px;
-    background-color: $green;
-  }
-}
-
-.subscribe-count {
-  padding: 0 6px;
-  border: 1px solid #ccc;
-  color: #777;
-  font-size: 12px;
-  text-align: center;
-  line-height: 24px;
-  display: inline-block;
-}
-
-#About {
-  line-height: 17px;
-
-  p {
-    margin: 0;
-  }
-
-  .description-extra {
-    margin: 10px 0;
-
-    li {
-      clear: both;
-      margin-bottom: 5px;
-      line-height: 1.2;
-    }
-
-    .title {
-      float: left;
-      margin: 0 10px 0 0;
-      width: 80px;
-      text-align: right;
-      font-size: 11px;
-      color: #333;
-      font-weight: bold;
-    }
-
-    .content {
-      color: #999;
-      font-size: 11px;
-    }
-  }
-}
-
-.vid-info {
-  .title {
-    font-size: 14px;
-    max-height: 2.4em;
-    line-height: 1.2;
-    display: block;
-    margin: 0 0 2px;
-    overflow: hidden;
-
-    a {
-      color: #333;
-    }
-
-    a:hover {
-      color: #438bc5;
-    }
-  }
-
-  .stat {
-    color: #666;
-    font-size: 11px;
-    display: block;
-    line-height: 1.4em;
-    height: 1.4em;
-  }
-
-  .stat-larger {
-    color: #666;
-    font-size: 13px;
-    display: block;
-    line-height: 1.4em;
-    height: 1.4em;
-  }
-}
-
-.usermenushit {
-  position: absolute;
-  top: 100%;
-  max-height: 80vh;
-  z-index: 1000;
-  width: 160px;
-  overflow: hidden;
-  background: #ffffff;
-  right: 0px;
-  text-align: left;
-
-  ul {
-    li {
-      padding: 6px 0;
-
-      a {
-        width: 100%;
-        display: block;
-        padding: 0 10px !important;
-      }
-    }
-
-    li:hover {
-      background-color: lighten($primary, 45%);
-    }
-  }
 }
 
 .comment {
@@ -615,19 +234,10 @@ input[type]:not([type=file]):not([type=submit]):focus {
   }
 }
 
-.user-action-container:hover {
-  background-color: #ffffff55;
-}
-
-.user-action {
-  padding: 10px;
-  font-size: 1.40em;
-}
-
 .statbox {
   text-align: center;
   font-size: 3em;
-  border: 1px solid $gray-150;
+  border: 1px solid $gray-100;
   padding: 0.5em;
   background-color: $gray-100;
 
@@ -656,6 +266,16 @@ input[type]:not([type=file]):not([type=submit]):focus {
 	color: white;
 	width: 100%;
 	margin: 0;
+}
+
+// new navs
+
+ul.nav {
+	margin: 0;
+	padding: 1em;
+	.title { margin: 0 0 0.5em; }
+	li { padding: 0.75em; } 
+	li.active { background: $primary; a { color: white; } }
 }
 
 /// Imports \\\
