fix some css fuck-ups

--- a/private/scss-finalium/_cards.scss
+++ b/private/scss-finalium/_cards.scss
@@ -1,7 +1,7 @@
 .card {
   border: 1px solid $gray-200;
   margin-bottom: 0.75em;
-  background-color: $light;
+  background-color: $card-bg;
 }
 
 .card-header {
